--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flipissue",
   "version": "1.0.0",
   "description": "Made to illustrate an issue with Phaser 3's flipX property.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
